--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,11 @@ header, article, aside, footer{
 
 .mainpic{
   width: 50%;
-  height: auto;  
+  height: auto;
+  align-self: center;  
 
 }
 
-.center{
-display: block;
-margin-left: auto;
-margin-right: auto;
-}
 
 .topnav {
     background-color: #333;
