--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,12 @@ header, article, aside, footer{
 a{
   color: #000;
 }
+a:link {
+  text-decoration: none;
+}
+a:hover {
+  color: rgb(131, 66, 192);
+}
 
 .topnav {
     background-color: #333;
